--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "dev": "next dev --turbopack",
     "build": "next build --turbopack",
-    "postinstall": "prisma generate",
+    "postinstall": "prisma migrate deploy && prisma generate --no-engine",
     "start": "next start",
     "lint": "eslint"
   },
